small menu and grid-gap fix

--- a/src/blocks/article/article.scss
+++ b/src/blocks/article/article.scss
@@ -72,6 +72,10 @@
 		flex-shrink: 0;
 		margin-right: 24px;
 
+		@include media('<=md') {
+			width: 220px;
+		}
+
 		@include media('<=xs') {
 			width: 180px;
 		}
@@ -110,6 +114,10 @@
 		
 		@include media('<=xs') {
 			font-size: 16px;
+		}
+		
+		@include media('<=xxs') {
+			font-size: 15px;
 		}
 	}
 }
