--- a/src/blocks/navi/navi.scss
+++ b/src/blocks/navi/navi.scss
@@ -34,7 +34,7 @@
 			display: block;
 			overflow: auto;
 			padding: 0;
-			height: auto;
+			height: 100%;
 		}
 	}
 
